--- a/po/fr.po
+++ b/po/fr.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-07-13 16:43+0200\n"
-"PO-Revision-Date: 2012-02-27 05:53+0000\n"
-"Last-Translator: François <Unknown>\n"
+"PO-Revision-Date: 2012-07-31 07:55+0000\n"
+"Last-Translator: Sid Roberts <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Launchpad-Export-Date: 2012-07-14 06:29+0000\n"
-"X-Generator: Launchpad (build 15614)\n"
+"X-Launchpad-Export-Date: 2012-08-01 04:44+0000\n"
+"X-Generator: Launchpad (build 15719)\n"
 
 #: GTG/plugins/notification_area/notification_area.py:123
 msgid "Add _New Task"
@@ -51,6 +51,8 @@ msgstr ""
 #: GTG/plugins/export/export_templates/description_statusrpt.py:19
 msgid "A template to create a compact text file listing only task titles."
 msgstr ""
+"Un modèle pour créer un fichier texte compact, listant uniquement les titres "
+"des tâches."
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
 msgid "Foldable booklet (PDF)"
@@ -771,31 +773,31 @@ msgstr "l'an prochain"
 
 #: GTG/tools/dates.py:306
 msgid "Monday"
-msgstr ""
+msgstr "lundi"
 
 #: GTG/tools/dates.py:307
 msgid "Tuesday"
-msgstr ""
+msgstr "mardi"
 
 #: GTG/tools/dates.py:308
 msgid "Wednesday"
-msgstr ""
+msgstr "mercredi"
 
 #: GTG/tools/dates.py:309
 msgid "Thursday"
-msgstr ""
+msgstr "jeudi"
 
 #: GTG/tools/dates.py:310
 msgid "Friday"
-msgstr ""
+msgstr "vendredi"
 
 #: GTG/tools/dates.py:311
 msgid "Saturday"
-msgstr ""
+msgstr "samedi"
 
 #: GTG/tools/dates.py:312
 msgid "Sunday"
-msgstr ""
+msgstr "dimanche"
 
 #: GTG/tools/dates.py:371
 msgid "Today"
@@ -829,7 +831,7 @@ msgstr "Nom du fichier :"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:63
 msgid "Import tags"
-msgstr ""
+msgstr "Importer des étiquettes"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:64
 msgid "All tags"
@@ -900,8 +902,8 @@ msgstr ""
 #: GTG/gtk/backends_dialog/addpanel.py:179
 msgid "Author"
 msgid_plural "Authors"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Auteur"
+msgstr[1] "Auteurs"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
@@ -988,8 +990,8 @@ msgstr[1] ""
 #: GTG/gtk/delete_dialog.py:103
 msgid "Permanently remove task"
 msgid_plural "Permanently remove tasks"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Supprimer la tâche définitivement"
+msgstr[1] "Supprimer les tâches définitivement"
 
 #: GTG/gtk/delete_dialog.py:114
 #, python-format
