--- a/po/it.po
+++ b/po/it.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-07-13 16:43+0200\n"
-"PO-Revision-Date: 2012-08-08 17:58+0000\n"
+"PO-Revision-Date: 2012-08-09 08:17+0000\n"
 "Last-Translator: Claudio Arseni <claudio.arseni@gmail.com>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2012-08-09 05:01+0000\n"
+"X-Launchpad-Export-Date: 2012-08-10 04:59+0000\n"
 "X-Generator: Launchpad (build 15761)\n"
 
 #: GTG/plugins/notification_area/notification_area.py:106
@@ -743,7 +743,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:130
 msgid "Learn how to use the Quick Add Entry"
-msgstr "Impara come usare l'Aggiunta Veloce"
+msgstr "Impara come usare l'inserimento rapido di attività"
 
 #: GTG/core/firstrun_tasks.py:131
 msgid ""
@@ -782,6 +782,47 @@ msgid ""
 "mum\", under the tags \"family\" and \"calls\", with the due date next "
 "Sunday and the start date tomorrow."
 msgstr ""
+"L'inserimento rapido è il metodo più veloce per aggiungere nuove attività. "
+"Usare la casella di selezione presente nel menù Visualizza per abilitare o "
+"disabilitare il campo di inserimento.\n"
+"\n"
+"Per aggiungere un'attività digitare semplicemente il titolo nel campo di "
+"inserimento e premere Invio. L'attività verrà creata e selezionata "
+"nell'esploratore. Se è selezionata un'etichetta nel riquadro, questa verrà "
+"applicata all'attività creata.\n"
+"\n"
+"È inoltre possibile creare un'attività con l'inserimento rapido specificando "
+"allo stesso tempo etichette, data di scadenza ed eventuali rinvii usando le "
+"seguenti regole di formattazione:\n"
+"\n"
+"\n"
+"etichette:etichetta1,etichetta2,etichetta3\n"
+" - in questo modo è possibile tutte le etichette necessarie usando la "
+"virgola come separatore\n"
+" - ogni parola che inizia con «@» verrà interpretata come un'etichetta\n"
+"\n"
+"entro:data\n"
+"posticipa:data\n"
+" - in questo modo è possibile applicare una data di scadenza o posticiparla. "
+"Le date possono essere inserite come aaaa-mm-gg (per esempio 2012-12-24) o "
+"aaaammdd (20121224) oppure mmdd (1224 - in questo caso verrà considerato "
+"l'anno corrente) o ancora oggi, domani o usando il nome di un giorno della "
+"settimana (entro:lunedì significa entro il prossimo lunedì). Le date "
+"aggiunte in questo modo non comariranno nel titolo dell'attività.\n"
+"\n"
+"Esempi:\n"
+"acquistare carta etichette:acuisti,ufficio entro:20121015 posticipa:martedì\n"
+"\n"
+" - L'esempio illustrato dice a GTG di creare una nuova attività dal titolo "
+"\"acquistare carta\", aggiungere le etichette \"acquisti\" e \"ufficio\", "
+"impostare come scadenza il 15 ottobre 2012 e posticipare l'inizio a "
+"\"martedì\".\n"
+"\n"
+"chiamare mamma etichette:famiglia,chiamate entro:domenica posticipa:domani\n"
+" - Con questo esempio a GTG verrà detto di creare una nuova attività dal "
+"titolo \"chiamare mamma\", aggiungere le etichette \"famiglia\" e "
+"\"chiamate\", impostare la scadenza a domenica prossima e posticipare "
+"l'inizio a domani."
 
 #: GTG/core/search.py:87
 msgid "not"
