Small update to gtcli man page

--- a/doc/gtcli.1
+++ b/doc/gtcli.1
@@ -46,6 +46,11 @@ Sets state of task identified by <tid> to done.
 .TP
 \fBbrowser [hide|show]\fB
 Hides or shows the task browser window.
+.SH "SEE ALSO"
+gtg (1)
+.SH BUGS
+Please report any bug you may experience to the \fBGTG\fP Developers, that can
+be reached at \fRhttps://edge.launchpad.net/gtg\fP
 .SH COPYRIGHT
 This manual page is Copyright 2012 Bertrand Rousseau
 <bertrand.rousseau@gmail.com>. Permission is granted to copy, distribute
