--- a/CHANGELOG
+++ b/CHANGELOG
@@ -48,6 +48,7 @@
     * Fix for bug #1027844: Fuzzy date shouldn't become start date
     * Save backups into backup/ folder, creates backups of tags.xml closes #993920
     * Search filter is deleted on empty search if tag_pane is closed, by Stefan Handschuh, closes #996236
+    * Fix for bug #897425: Write manpage for gtcli and update other manpages as well
 
 2012-02-13 Getting Things GNOME! 0.2.9
     * Big refractorization of code, now using liblarch
