Typo in GTG description

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ====== Getting Things GNOME! ======
 
-Getting Things GNOME! (GTG) is a personal task and TODO list items organizer
+Getting Things GNOME! (GTG) is a personal tasks and TODO list items organizer
 for the GNOME desktop environment inspired by the Getting Things Done (GTD)
 methodology. GTG is designed with flexibility, adaptability, and ease of use
 in mind so it can be used as more than just GTD software.
