--- a/po/it.po
+++ b/po/it.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-07-13 16:43+0200\n"
-"PO-Revision-Date: 2012-08-09 08:17+0000\n"
-"Last-Translator: Claudio Arseni <claudio.arseni@gmail.com>\n"
+"PO-Revision-Date: 2012-08-17 20:32+0000\n"
+"Last-Translator: Radina Matic <radina.matic@gmail.com>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2012-08-10 04:59+0000\n"
-"X-Generator: Launchpad (build 15761)\n"
+"X-Launchpad-Export-Date: 2012-08-18 05:00+0000\n"
+"X-Generator: Launchpad (build 15810)\n"
 
 #: GTG/plugins/notification_area/notification_area.py:106
 msgid "Add _New Task"
@@ -36,7 +36,7 @@ msgstr "Un modello per creare un semplice file di testo con alcune attività."
 
 #: GTG/plugins/export/export_templates/description_simple.py:18
 msgid "A simple Web page that can be easily printed."
-msgstr "Una semplice pagina web che può essere facilemnte stampata."
+msgstr "Una semplice pagina web che può essere facilmente stampata."
 
 #: GTG/plugins/export/export_templates/description_simple.py:19
 msgid ""
@@ -808,10 +808,11 @@ msgstr ""
 "aaaammdd (20121224) oppure mmdd (1224 - in questo caso verrà considerato "
 "l'anno corrente) o ancora oggi, domani o usando il nome di un giorno della "
 "settimana (entro:lunedì significa entro il prossimo lunedì). Le date "
-"aggiunte in questo modo non comariranno nel titolo dell'attività.\n"
+"aggiunte in questo modo non compariranno nel titolo dell'attività.\n"
 "\n"
 "Esempi:\n"
-"acquistare carta etichette:acuisti,ufficio entro:20121015 posticipa:martedì\n"
+"acquistare carta etichette:acquisti,ufficio entro:20121015 "
+"posticipa:martedì\n"
 "\n"
 " - L'esempio illustrato dice a GTG di creare una nuova attività dal titolo "
 "\"acquistare carta\", aggiungere le etichette \"acquisti\" e \"ufficio\", "
