--- a/CHANGELOG
+++ b/CHANGELOG
@@ -52,6 +52,7 @@
     * Fix for bug #897425: Write manpage for gtcli and update other manpages as well
     * Fix for bug-1037051 (Due date is not set for a new subtask), by Nimit Shah
     * Fix for bug #1036955: Due date is not preselected when start date is filled, by Steve Scheel
+    * Fix for bug #1045036: Slovak Translation Updated by Slavko
 
 2012-02-13 Getting Things GNOME! 0.2.9
     * Big refractorization of code, now using liblarch
