--- a/po/ru.po
+++ b/po/ru.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-09-11 10:37+0200\n"
-"PO-Revision-Date: 2012-08-29 18:18+0000\n"
-"Last-Translator: Alexey Ivanov <alexey.ivanes@gmail.com>\n"
+"PO-Revision-Date: 2012-09-12 18:56+0000\n"
+"Last-Translator: DmDr <cardioexp@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2012-09-12 04:38+0000\n"
-"X-Generator: Launchpad (build 15930)\n"
+"X-Launchpad-Export-Date: 2012-09-13 04:44+0000\n"
+"X-Generator: Launchpad (build 15944)\n"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
 msgid "Foldable booklet (PDF)"
@@ -275,7 +275,7 @@ msgstr "Не правда ли, очень полезное сообщение? 
 
 #: GTG/core/firstrun_tasks.py:35
 msgid "Getting Started With GTG"
-msgstr ""
+msgstr "Начнем пользоваться GTG?"
 
 #: GTG/core/firstrun_tasks.py:36
 msgid ""
@@ -350,10 +350,80 @@ msgid ""
 "\n"
 "The GTG team."
 msgstr ""
+"Добро пожаловать в Getting Things GNOME! (Дела в порядке в GNOME!), ваш "
+"органайзер! В Getting Things GNOME! (GTG), всё называется "
+"&quot;Задача&quot;. Всё: от строительства моста через Тихий Океан до замены "
+"лампочки или организации вечеринки!\n"
+"\n"
+"Если Вы новичок в GTG, уделите пару минут на чтение этих советов как "
+"наиболее эффективно использовать GTG, чтобы организовать Вашу жизнь.\n"
+"\n"
+"Ввод и редактирование задач:\n"
+"\n"
+"Чтобы поставить себе новую задачу, просто щелкните по кнопке &quot;Новая "
+"задача&quot; и просто опишите Вашу новую задачу. Возможно, стоит сделать "
+"какие-то дополнительные заметки. И это всё: задача создана! Как только "
+"задача будет выполнена, щелкните по кнопке &quot;Пометить Выполнена&quot;.\n"
+"\n"
+"В GTG задача автоматически сохраняется по мере ее редактирования. Не нужно "
+"нажимать кнопку &quot;Сохранить&quot;!  Попробуйте: напишите что0нибудь "
+"прямо тут, закройте окно, откройте опять: Вы увидите все изменения!\n"
+"\n"
+"Подзадачи:\n"
+"\n"
+"В реальности, чтобы сделать что-то, приходится идти к цели маленькими "
+"шажками, решая маленькие задачи. GTG помогает и в этом, просто создавайте "
+"&quot;подзадачи&quot;. В GTG установлено правило: все подзадачи должны быть "
+"выполнены перед тем, как можно будет отметить выполненной родительскую "
+"задачу.\n"
+"\n"
+"В GTG любая задача может содержать несколько подзадач. В описании задачи "
+"есть ссылки (посмотрите чуть ниже), это и есть подзадачи. Чтобы открыть и "
+"отредактировать задачу, просто кликните ссылку. Попробуйте! Откройте эту "
+"подзадачу:\n"
+"<subtask>1@1</subtask>\n"
+"\n"
+"Закрытие задач:\n"
+"\n"
+"В GTG, закончив работу с задачей, Вы можете закрыть ее как кнопкой "
+"&quot;Отметить Выполнено&quot; так и кнопкой &quot;Отменить&quot; button. "
+"Первая нужна, чтобы отметить завершенные задачи, а вторая - для отметки "
+"задач, которые потеряли актуальность. Почему бы не попробовать? Например, "
+"выполнить эту задачу.\n"
+"\n"
+"Кода Вы закрываете задачу, Вы получите предупреждение, что будут закрыты все "
+"подзадачи! В самом деле: GTG предполагает, что если завершена задача в "
+"целом, то нет никакой необходимости что-то делать ее подзадачами.\n"
+"\n"
+"Список выполненных и отмененных задач можно вывести на экран. &quot;Панель "
+"закрытых задач&quot; по умолчанию выключена, но может быть включена в меню "
+"Вид.\n"
+"\n"
+"Еще несколько советов по применению GTG:\n"
+"\n"
+"В этих подзадачах описаны разные полезные функции GTG:\n"
+"<subtask>2@1</subtask>\n"
+"<subtask>3@1</subtask>\n"
+"<subtask>4@1</subtask>\n"
+"<subtask>5@1</subtask>\n"
+"<subtask>6@1</subtask>\n"
+"<subtask>7@1</subtask>\n"
+"<subtask>8@1</subtask>\n"
+"\n"
+"А еще в GTG работает клавиша F1 и есть меню Справка, в котором есть описание "
+"программы.\n"
+"\n"
+"Мы искренне надеемся, что Вам понравится GTG, и благодарим Вас, что выбрали "
+"его, хотя бы и для пробы! Не стесняйтесь присылать нам описания ошибок и "
+"идеи по улучшению GTG! Это можно сделать на web странице "
+"https://bugs.launchpad.net/gtg/+filebug А если Вы хотите быть в курсе всех "
+"новостей GTG и его применения, посетите наш блог http://gtg.fritalk.com\n"
+"\n"
+"Команда GTG."
 
 #: GTG/core/firstrun_tasks.py:114
 msgid "Learn How To Use Subtasks"
-msgstr ""
+msgstr "Научиться пользоваться подзадачами"
 
 #: GTG/core/firstrun_tasks.py:115
 msgid ""
@@ -383,7 +453,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:142
 msgid "Learn How To Use Tags"
-msgstr ""
+msgstr "Научиться пользоваться метками"
 
 #: GTG/core/firstrun_tasks.py:143
 msgid ""
@@ -417,7 +487,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:174
 msgid "Learn How To Use The Work View"
-msgstr ""
+msgstr "Научиться пользоваться Рабочим Планом"
 
 #: GTG/core/firstrun_tasks.py:175
 msgid ""
@@ -454,7 +524,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:209
 msgid "Learn How To Use Plugins"
-msgstr ""
+msgstr "Научиться использовать расширения"
 
 #: GTG/core/firstrun_tasks.py:210
 msgid ""
@@ -471,7 +541,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:224
 msgid "Reporting Bugs"
-msgstr ""
+msgstr "Сообщить об ошибках"
 
 #: GTG/core/firstrun_tasks.py:225
 msgid ""
@@ -490,7 +560,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:241
 msgid "Learn How To Use The Quick Add Entry"
-msgstr ""
+msgstr "Научиться использовать быстрый ввод задач"
 
 #: GTG/core/firstrun_tasks.py:242
 msgid ""
@@ -537,7 +607,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:287
 msgid "Learn How To Use Synchronization Services"
-msgstr ""
+msgstr "Научиться использовать сервисы синхронизации"
 
 #: GTG/core/firstrun_tasks.py:288
 msgid ""
@@ -563,7 +633,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:311
 msgid "Learn How To Search For Tasks"
-msgstr ""
+msgstr "Как найти задачу"
 
 #: GTG/core/firstrun_tasks.py:312
 msgid ""
@@ -1268,11 +1338,11 @@ msgstr "<b>Просмотр задач</b>"
 
 #: GTG/gtk/preferences.glade.h:6
 msgid "Font :"
-msgstr ""
+msgstr "Шрифт:"
 
 #: GTG/gtk/preferences.glade.h:7
 msgid "<b>Editor</b>"
-msgstr ""
+msgstr "<b>Редактор</b>"
 
 #: GTG/gtk/preferences.glade.h:8
 msgid "page 1"
@@ -1611,6 +1681,7 @@ msgid ""
 "GTG is a personal tasks and TODO-list items organizer for the GNOME desktop "
 "environment."
 msgstr ""
+"GTG - персональный органайзер для задач и дел, работающий в в среде GNOME."
 
 #: GTG/gtk/browser/taskbrowser.glade.h:34
 msgid "GTG website"
@@ -1647,51 +1718,51 @@ msgstr "Добавить подзадачу"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:43
 msgid "_Set Start Date"
-msgstr ""
+msgstr "Задать дату начала"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:44
 msgid "T_oday"
-msgstr ""
+msgstr "Сегодня"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:45
 msgid "_Tomorrow"
-msgstr ""
+msgstr "Завтра"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:46
 msgid "Next _Week"
-msgstr ""
+msgstr "На следующей неделе"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:47
 msgid "Next _Month"
-msgstr ""
+msgstr "В следующем месяце"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:48
 msgid "Next _Year"
-msgstr ""
+msgstr "На будущий год"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:49
 msgid "_Clear Start Date"
-msgstr ""
+msgstr "Сбросить дату начала"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:50
 msgid "Set Due Date"
-msgstr ""
+msgstr "Завершить к"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:51
 msgid "_Now"
-msgstr ""
+msgstr "Сейчас"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:52
 msgid "_Soon"
-msgstr ""
+msgstr "Скоро"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:53
 msgid "_Someday"
-msgstr ""
+msgstr "Когда-нибудь"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:54
 msgid "_Clear Due Date"
-msgstr ""
+msgstr "Сбросить дату завершения"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:55
 msgid "Modify Tags..."
