--- a/po/ru.po
+++ b/po/ru.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-09-11 10:37+0200\n"
-"PO-Revision-Date: 2012-09-12 18:56+0000\n"
+"PO-Revision-Date: 2012-09-13 20:00+0000\n"
 "Last-Translator: DmDr <cardioexp@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2012-09-13 04:44+0000\n"
+"X-Launchpad-Export-Date: 2012-09-14 04:37+0000\n"
 "X-Generator: Launchpad (build 15944)\n"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
@@ -450,6 +450,29 @@ msgid ""
 "can always change it by drag-and-dropping tasks on each other in the tasks "
 "list."
 msgstr ""
+"&quot;Подзадачу&quot; надо решить для выполнения основной задачи. Цель "
+"использования подзадач в GTG - облегчить выполнение основной задачи и "
+"упростить отслеживание результата работы.\n"
+"\n"
+"Чтобы добавить подзадачу к описанию задачи (например, прямо тут, в этом "
+"окне), начните новую строку с дефиса &quot;-&quot;, потом введите название "
+"подзадачи и нажмите Enter (Ввод).\n"
+"\n"
+"Давайте попробуем прямо тут. Наберите, например: &quot;- Это моя первая "
+"подзадача!&quot;и нажмите Enter:\n"
+"\n"
+"\n"
+"\n"
+"Другой способ сделать то же самое - щелкнуть по кнопке &quot;Вставить "
+"подзадачу&quot;.\n"
+"\n"
+"Заметим, что к подзадачи должны подчиняться правилам. Во-первых, дата "
+"завершения подзадачи никогда не может быть позже даты завершения основной "
+"задачи. Во-вторых, если Вы помечаете основную задачу выполненной, то все ее "
+"подзадачи тоже будут отмечены выполненными.\n"
+"\n"
+"И наконец: если порядок задач и подзадач Вам не удобен, его всегда можно "
+"изменить, просто перетащив мышью  подзадачи между задачами."
 
 #: GTG/core/firstrun_tasks.py:142
 msgid "Learn How To Use Tags"
@@ -484,6 +507,29 @@ msgid ""
 "@to_pay on @money, every task tagged with @to_pay will also appear when you "
 "select @money."
 msgstr ""
+"Для сортировки задач в GTG, применяются метки. Метка - это слово, перед "
+"которым стоит значок &quot;@&quot;.\n"
+"\n"
+"Попробуйте ввести любое слово сразу после значка &quot;@&quot;\n"
+"\n"
+"Если оно выделилось желтым, то оно стало меткой! И эта метка уже связана с "
+"этой задачей. Всё просто!\n"
+"\n"
+"В меню Вид можно включить боковую панель со списком меток.\n"
+"\n"
+"Если щелкнуть по метке правой кнопкой мыши, метку можно изменить. Метку "
+"можно выделить цветом или иконкой. Все это удобно для быстрого поиска задач, "
+"помеченных какой-то меткой.\n"
+"\n"
+"Новые метки, всегда назначаются основной задаче, но никогда ее подзадачам. "
+"Но если создается новая подзадача к уже отмеченной метками задаче, то "
+"подзадача будет помечена также, как и основная.\n"
+"\n"
+"Кстати, если нужно создать иерархию меток, то это можно сделать, "
+"перетаскивая одну метку на другую. Это полезно, чтобы сгруппировать задачи и "
+"иметь возможность отображать их в списке задач одновременно. Например, есть "
+"пара меток @деньги и @оплатить, если перетащить метку @оплатить на @деньги, "
+"все задачи с меткой @оплатить будут показаны, если выбрать @деньги."
 
 #: GTG/core/firstrun_tasks.py:174
 msgid "Learn How To Use The Work View"
@@ -521,6 +567,37 @@ msgid ""
 "subtask, adding a tag hidden in the Work View, etc.). To avoid this, it's "
 "better not to edit your task while using the Work View."
 msgstr ""
+"Если нажать кнопку  &quot;Рабочий план&quot; то в списке задач останутся "
+"только &quot;выполнимые&quot; задачи.\n"
+"\n"
+"Что такое выполнимые задачи? Это те задачи, которые можно выполнить прямо "
+"сейчас.\n"
+"\n"
+"Это те задачи, у которых уже наступила дата начала выполнения.\n"
+"\n"
+"Это те задачи, у которых нет незакрытых подзадач, то есть можно выполнять "
+"саму задачу.\n"
+"\n"
+"Это те задачи, срок выполнения которых точен, а не задан &quot;Когда-ни-"
+"будь&quot;, эта дата завершения зарезервирована для тех вещей, которые "
+"сначала стоит обдумать, а потом делать.\n"
+"\n"
+"Вкратце: Рабочий план отражает только те задачи, которыми можно заниматься "
+"прямо сейчас. Это очень полезно когда Вы хотите сконцентрироваться именно на "
+"тех задачах, которые актуальны именно сейчас!\n"
+"\n"
+"При использовании меток, можно отменить показ в рабочем плане задач, имеющих "
+"какую-то метку. Это делается из контекстного меню метки. Например, можно "
+"создать метку &quot;@ждем&quot; для задач, которые временно заблокированы "
+"ожиданием какого-то внешнего события (скажем, телефонного звонки или чего-то "
+"еще).\n"
+"\n"
+"В завершение одно важное замечание относительно рабочего плана. Поскольку "
+"рабочий план изменяется немедленно, в процессе редактирования задачи, может "
+"произойти так, что задача исчезнет из рабочего плана из-за только что "
+"сделанных изменений (например, добавления подздачи или метки, скрывающей "
+"задачу из рабочего плана). Чтобы такого не произошло, лучше не начинать "
+"редактировать задачи, открывая их из рабочего плана."
 
 #: GTG/core/firstrun_tasks.py:209
 msgid "Learn How To Use Plugins"
@@ -538,6 +615,13 @@ msgid ""
 "You can find the Plugin Manager by selecting Edit in the Menu Bar, then "
 "clicking Plugins."
 msgstr ""
+"В GTG предусмотрено подключение расширений, они дают дополнительные "
+"возможности.\n"
+"\n"
+"Например, иконка в области уведомлений со ссылкой на GTG, является одним из "
+"расширений. Автоматически удаляет закрытые задачи также расширение.\n"
+"\n"
+"Менеджер расширений вызывается из меню Правка - Дополнения."
 
 #: GTG/core/firstrun_tasks.py:224
 msgid "Reporting Bugs"
@@ -557,6 +641,16 @@ msgid ""
 "If you have some trouble with GTG, we might be able to help you or to solve "
 "your problem really quickly."
 msgstr ""
+"GTG продолжает разрабатываться. Мы будем рады, если Вы будете пользоваться "
+"им повседневно, однако Вы можете столкнуться с ошибками.\n"
+"\n"
+"Если Вы обнаружили ошибку, пожалуйста, сообщите нам об этом на нашей "
+"странице в Launchpad: https://bugs.launchpad.net/gtg/+filebug\n"
+"\n"
+"Мы хотим сделать GTG лучше. Мы приветствуем любой вклад, любые идеи!\n"
+"\n"
+"Если вы столкнулись со сложностями при использовании GTG, мы постараемся "
+"решить проблему в самые сжатые сроки."
 
 #: GTG/core/firstrun_tasks.py:241
 msgid "Learn How To Use The Quick Add Entry"
@@ -604,6 +698,44 @@ msgid ""
 "mum&quot;, under the tags &quot;family&quot; and &quot;calls&quot;, with the "
 "due date next Sunday and the start date tomorrow."
 msgstr ""
+"Самый простой способ постановки новой задачи - использование поля быстрого "
+"ввода. Чтобы показать или скрыть это поле используйте чек-бокс в меню Вид.\n"
+"\n"
+"Чтобы создать задачу, введите ее заголовок и нажмите Enter (Ввод). Задача "
+"немедленно будет создана и отобразится в списке. Если во время создания "
+"задачи в боковой панели была выбрана метка, то она пометит новую задачу.\n"
+"\n"
+"Кроме этого, можно не только задать заголовок задачи, но и установить метки, "
+"даты начала и завершения задачи. Для этого используются форматы:\n"
+"\n"
+"tags:tag1,tag2,tag3 (метки:метка1,метка2, метка3)\n"
+"\n"
+"Так можно задать сколько угодно меток. Обратите внимание, что любое слово в "
+"заголовке задачи, которому предшествует знак  &quot;@&quot; также будет "
+"восприниматься как метка.\n"
+"\n"
+"due:date (до:дата)\n"
+"defer:date (отложить:дата)\n"
+"\n"
+"Так можно задать даты начала и завершения задачи. Даты можно задавать в "
+"формате yyyy-mm-dd (например, 2012-04-01) или yyyymmdd (20120401) или mmdd "
+"(0401 - будет применен текущий год) или today (сегодня), tomorrow (завтра) "
+"или как название дня недели (до:понедельник означает ближайший понедельник). "
+"Заданные таким способом даты не отображаются в заголовке задачи.\n"
+"\n"
+"Примеры:\n"
+"\n"
+"Купить канцелярщину tags:покупки,офис до:20120330 отложить:вторник\n"
+"\n"
+"Этот пример создает задачу &quot;Купить канцелярщину&quot;, с метками "
+"&quot;покупки&quot; и &quot;офис&quot;, которую надлежит выполнить к 30 "
+"марта 2012 года и которую можно начинать выполнять с ближайшего вторника.\n"
+"\n"
+"Позвонить родителям метки:семья,телефон due:sunday отложить:вторник\n"
+"\n"
+"А тут создается задача &quot;позвонить родителям&quot; с метками "
+"&quot;семья&quot; и &quot;телефонs&quot;, звонок можно сделать до "
+"воскресенья, но начиная с завтрашнего дня."
 
 #: GTG/core/firstrun_tasks.py:287
 msgid "Learn How To Use Synchronization Services"
@@ -630,6 +762,22 @@ msgid ""
 "about them by in the dedicated documentation in GTG's help (use the Help "
 "menu or press F1 to get access to it)."
 msgstr ""
+"Сервисы синхронизации дают возможность GTG синхронизироваться (импортировать "
+"или получать доступ) с задачами, заметками или ошибками таких служб, как  "
+"Launchpad, Remember the Milk, Tomboy и т.п.\n"
+"\n"
+"Это особенно полезно, если Вы пользуетесь GTG на нескольких разных "
+"компьютерах, или для редактирования задач с использованием других сайтов и "
+"служб. GTG также может импортировать задачи, например, из Launchpad, что "
+"удобно для управления задачами, связанными с работой над ошибками, используя "
+"GTG!\n"
+"\n"
+"Чтобы воспользоваться сервисами синхронизации, выберите в меню Правка "
+"&quot;Сервисы синхронизации&quot;. Это позволит выбрать локальные программы "
+"или удаленные службы, чтобы импортировать или экспортировать задачи.\n"
+"\n"
+"Подробно узнать про работу сервисов синхронизации можно в документации GTG "
+"(используйте меню Помощь или клавишу F1, чтобы вывести документацию)."
 
 #: GTG/core/firstrun_tasks.py:311
 msgid "Learn How To Search For Tasks"
@@ -662,6 +810,27 @@ msgid ""
 "you can read the documentation available in GTG's help (press F1 or use the "
 "Help menu to get access to it)."
 msgstr ""
+"Для удобства поиска нужных задач в GTG есть поиск задач по их описанию.\n"
+"\n"
+"Нет ничего проще найти задачу: просто напечатайте искомое слово в строке "
+"быстрого добавления задачи, затем выберите  &quot;Поиск&quot; в появившемся "
+"меню.\n"
+"\n"
+"GTG сохраняет историю поиска в боковой панели в разделе &quot;Поиск&quot;. "
+"Таким образом, всегда можно вернуться к найденным задачам. Результаты поиска "
+"обновляются автоматически, поэтому Вы всегда будете видеть актуальные "
+"задачи, которые соответствуют запросам.\n"
+"\n"
+"GTG также сохраняет поисковые запросы до того момента, пока Вы сами не "
+"удалите их (кликните правой кнопкой мыши по запросу и выберите "
+"&quot;Удалить&quot;). Это позволяет выходить из GTG, не теряя результатов "
+"поиски. Это удобно, если Вы регулярно пользуетесь поиском задач.\n"
+"\n"
+"GTG возможности поиска не ограничиваются лишь поиском просто слов. Например, "
+"запрос &quot;@ошибки !сегодня&quot; выберет все задачи с меткой @ошибки , "
+"которые должны быть завершены сегодня. Чтобы ознакомиться со всеми "
+"возможностями поиска, обратитесь к документации на GTG (нажмите на клавишу "
+"F1 или через меню Помощь)."
 
 #: GTG/core/search.py:87
 msgid "not"
@@ -1703,6 +1872,19 @@ msgid ""
 "Getting Things GNOME!; if not, write to the Free Software Foundation, Inc., "
 "51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
 msgstr ""
+"Getting Things GNOME! - свободное программное обеспечение; вы можете "
+"распространять или модифицировать его на условиях GNU General Public "
+"License, опубликованной Free Software Foundation; версия 3 или (по вашему "
+"выбору) старше.\n"
+"\n"
+"Getting Things GNOME! распространяется с надеждой на то, что он будет вам "
+"полезен, однако без каких-либо гарантий, включая гарантию применимости или "
+"полезности для решения какой-либо функции. Все детали изложены в GNU General "
+"Public License.\n"
+"\n"
+"Копия GNU General Public License имеется в Getting Things GNOME!. Вы также "
+"можете направить запрос в Free Software Foundation, Inc., по адресу: 51 "
+"Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
 
 #: GTG/gtk/browser/taskbrowser.glade.h:40
 msgid "Mark as Not Done"
