--- a/po/pl.po
+++ b/po/pl.po
@@ -9,16 +9,16 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-09-11 10:37+0200\n"
-"PO-Revision-Date: 2012-05-30 12:35+0000\n"
-"Last-Translator: btomasz <btomasz92@gmail.com>\n"
+"PO-Revision-Date: 2012-09-22 19:43+0000\n"
+"Last-Translator: Piotr Strębski <strebski@o2.pl>\n"
 "Language-Team: Polish <ponton@jabster.pl>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2012-09-12 04:38+0000\n"
-"X-Generator: Launchpad (build 15930)\n"
+"X-Launchpad-Export-Date: 2012-09-23 04:39+0000\n"
+"X-Generator: Launchpad (build 15985)\n"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
 msgid "Foldable booklet (PDF)"
@@ -275,7 +275,7 @@ msgstr "Bardzo pomocna informacja, nieprawdaż? Zgłoś błąd."
 
 #: GTG/core/firstrun_tasks.py:35
 msgid "Getting Started With GTG"
-msgstr ""
+msgstr "Rozpocznij pracę z GTG"
 
 #: GTG/core/firstrun_tasks.py:36
 msgid ""
@@ -353,7 +353,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:114
 msgid "Learn How To Use Subtasks"
-msgstr ""
+msgstr "Naucz się jak używać podzadań"
 
 #: GTG/core/firstrun_tasks.py:115
 msgid ""
@@ -383,7 +383,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:142
 msgid "Learn How To Use Tags"
-msgstr ""
+msgstr "Naucz się jak używać znaczników"
 
 #: GTG/core/firstrun_tasks.py:143
 msgid ""
@@ -417,7 +417,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:174
 msgid "Learn How To Use The Work View"
-msgstr ""
+msgstr "Naucz się jak używać widoku roboczego"
 
 #: GTG/core/firstrun_tasks.py:175
 msgid ""
@@ -454,7 +454,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:209
 msgid "Learn How To Use Plugins"
-msgstr ""
+msgstr "Naucz się jak używać wtyczek"
 
 #: GTG/core/firstrun_tasks.py:210
 msgid ""
@@ -471,7 +471,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:224
 msgid "Reporting Bugs"
-msgstr ""
+msgstr "Zgłaszanie błędów"
 
 #: GTG/core/firstrun_tasks.py:225
 msgid ""
@@ -563,7 +563,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:311
 msgid "Learn How To Search For Tasks"
-msgstr ""
+msgstr "Naucz się jak wyszukiwać zadania"
 
 #: GTG/core/firstrun_tasks.py:312
 msgid ""
@@ -1036,7 +1036,7 @@ msgstr[2] " minut"
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
 msgid "Synchronization Services - %s"
-msgstr ""
+msgstr "Usługi synchronizacji - %s"
 
 #: GTG/gtk/backends_dialog/__init__.py:302
 #, python-format
@@ -1125,7 +1125,7 @@ msgstr "Oznacz jako wykonane"
 #: GTG/gtk/editor/taskeditor.glade.h:3 GTG/gtk/editor/__init__.py:33
 #: GTG/gtk/browser/__init__.py:40 GTG/gtk/browser/taskbrowser.glade.h:26
 msgid "Dismiss"
-msgstr "Oddal"
+msgstr "Porzuć"
 
 #: GTG/gtk/editor/taskeditor.glade.h:4 GTG/gtk/browser/tag_context_menu.py:63
 #: GTG/gtk/browser/taskbrowser.glade.h:27
@@ -1167,7 +1167,7 @@ msgstr "Kiedyś"
 #: GTG/gtk/editor/__init__.py:31 GTG/gtk/browser/__init__.py:36
 #: GTG/gtk/browser/taskbrowser.glade.h:25
 msgid "Mark as Done"
-msgstr "Uznacz jako wykonane"
+msgstr "Oznacz jako wykonane"
 
 #: GTG/gtk/editor/__init__.py:32 GTG/gtk/browser/__init__.py:38
 msgid "Mark as not Done"
@@ -1175,7 +1175,7 @@ msgstr "Oznacz jako niewykonane"
 
 #: GTG/gtk/editor/__init__.py:34 GTG/gtk/browser/__init__.py:42
 msgid "Undismiss"
-msgstr "Cofnij oddalenie"
+msgstr "Cofnij porzucenie"
 
 #: GTG/gtk/editor/__init__.py:36
 msgid "Mark this task as done"
@@ -1240,12 +1240,12 @@ msgstr[2] "Był %(days)d dni temu"
 #: GTG/gtk/preferences.py:80
 #, python-format
 msgid "Preferences - %s"
-msgstr ""
+msgstr "Ustawienia - %s"
 
 #: GTG/gtk/plugins.py:142
 #, python-format
 msgid "Plugins - %s"
-msgstr ""
+msgstr "Wtyczki - %s"
 
 #: GTG/gtk/deletion.glade.h:1
 msgid "Confirm task deletion"
@@ -1273,49 +1273,51 @@ msgstr "<b>Lista zadań</b>"
 
 #: GTG/gtk/preferences.glade.h:6
 msgid "Font :"
-msgstr ""
+msgstr "Czcionka:"
 
 #: GTG/gtk/preferences.glade.h:7
 msgid "<b>Editor</b>"
-msgstr ""
+msgstr "<b>Edytor</b>"
 
 #: GTG/gtk/preferences.glade.h:8
 msgid "page 1"
-msgstr ""
+msgstr "strona 1"
 
 #: GTG/gtk/preferences.glade.h:9
 msgid "page 2"
-msgstr ""
+msgstr "strona 2"
 
 #: GTG/gtk/preferences.glade.h:10
 msgid "page 3"
-msgstr ""
+msgstr "strona 3"
 
 #: GTG/gtk/browser/tag_editor.py:87
 msgid "Remove selected icon"
-msgstr ""
+msgstr "Usuń zaznaczoną ikonę"
 
 #: GTG/gtk/browser/tag_editor.py:224
 msgid "Name : "
-msgstr ""
+msgstr "Nazwa: "
 
 #: GTG/gtk/browser/tag_editor.py:231
 msgid "Show Tag in Work View :"
-msgstr ""
+msgstr "Pokaż znaczniki w widoku roboczym:"
 
 #: GTG/gtk/browser/tag_editor.py:244
 msgid "Select Tag Color:"
-msgstr ""
+msgstr "Zaznacz kolor znacznika:"
 
 #: GTG/gtk/browser/tag_editor.py:284
 msgid ""
 "Click To\n"
 "Set Icon"
 msgstr ""
+"Kliknij aby\n"
+"ustawić ikonę"
 
 #: GTG/gtk/browser/tag_editor.py:294
 msgid "Enter tag name here"
-msgstr ""
+msgstr "Podaj tutaj nazwę znacznika"
 
 #: GTG/gtk/browser/__init__.py:37
 msgid "Mark the selected task as done"
@@ -1444,7 +1446,7 @@ msgstr "Tytuł"
 
 #: GTG/gtk/browser/tag_context_menu.py:58
 msgid "Edit Tag..."
-msgstr ""
+msgstr "Zmodyfikuj znacznik..."
 
 #: GTG/gtk/browser/custominfobar.py:36
 #, python-format
@@ -1496,15 +1498,15 @@ msgstr "Kontynuuj"
 
 #: GTG/gtk/browser/simple_color_selector.py:236
 msgid "Add custom color"
-msgstr ""
+msgstr "Dodaj własny kolor"
 
 #: GTG/gtk/browser/simple_color_selector.py:264
 msgid "Choose a color"
-msgstr ""
+msgstr "Wybierz kolor"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:1
 msgid "Getting Things GNOME!"
-msgstr ""
+msgstr "Getting Things GNOME!"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:2
 msgid "_Tasks"
@@ -1564,7 +1566,7 @@ msgstr "Po_moc"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:17
 msgid "Open GTG help"
-msgstr ""
+msgstr "Otwórz pomoc GTG"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:18
 msgid "Help to translate GTG into your language"
@@ -1704,6 +1706,8 @@ msgstr "Modyfikuj znaczniki..."
 #: GTG/info.py:34
 msgid "GTG is a personal tasks and TODO-list items organizer for the GNOME."
 msgstr ""
+"GTG jest osobistym organizerem zadań i list \"Do Zrobienia\" dla środowiska "
+"GNOME."
 
 #~ msgid "Keep as Note"
 #~ msgstr "Zachowaj jako notatkę"
