--- a/po/es.po
+++ b/po/es.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-09-11 10:37+0200\n"
-"PO-Revision-Date: 2012-08-16 03:40+0000\n"
-"Last-Translator: Radina Matic <radina.matic@gmail.com>\n"
+"PO-Revision-Date: 2012-10-06 20:54+0000\n"
+"Last-Translator: Rafael Soler - Domatix <rafa.soler@domatix.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2012-09-12 04:38+0000\n"
-"X-Generator: Launchpad (build 15930)\n"
+"X-Launchpad-Export-Date: 2012-10-07 04:39+0000\n"
+"X-Generator: Launchpad (build 16061)\n"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
 msgid "Foldable booklet (PDF)"
@@ -33,7 +33,7 @@ msgstr ""
 
 #: GTG/plugins/export/export_templates/description_sexy.py:18
 msgid "A professional-looking HTML page"
-msgstr ""
+msgstr "Página HTML de aspecto profesional"
 
 #: GTG/plugins/export/export_templates/description_sexy.py:19
 msgid ""
@@ -79,7 +79,7 @@ msgstr ""
 #: GTG/plugins/export/export.py:138
 #, python-format
 msgid "GTG could not generate the document: %s"
-msgstr ""
+msgstr "GTG no pudo generar el documento: %s"
 
 #: GTG/plugins/export/export.py:184
 msgid "Export the tasks currently listed"
@@ -274,7 +274,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:35
 msgid "Getting Started With GTG"
-msgstr ""
+msgstr "Comenzando con GTG"
 
 #: GTG/core/firstrun_tasks.py:36
 msgid ""
