--- a/CHANGELOG
+++ b/CHANGELOG
@@ -54,6 +54,7 @@
     * Fix for bug #1036955: Due date is not preselected when start date is filled, by Steve Scheel
     * Fix for bug #1045036: Slovak Translation Updated by Slavko
     * Fix for bug #1038662: Undefined due dates in subtasks should always stay undefined and displayed as such in the editor
+    * Fix for bug #1036695: Date constraints after drag and drop not applied
 
 2012-02-13 Getting Things GNOME! 0.2.9
     * Big refractorization of code, now using liblarch
